# asdf-gui

./: .gitignore  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: i18n.ts  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/asdf/: executor.rs  parser.rs
src-tauri/src/commands/: info.rs  mod.rs  plugin.rs  settings.rs  shim.rs  tool_versions.rs  version.rs
src-tauri/src/config/: app_config.rs  context.rs  mod.rs
src/components/layout/: app-layout.tsx  sidebar.tsx  status-bar.tsx
src/components/project-picker/: project-picker-dialog.tsx
src/components/shared/: asdf-not-found.tsx  error-boundary.tsx
src/features/dashboard/: current-versions-table.tsx  dashboard-page.tsx  environment-summary.tsx  quick-actions.tsx
src/features/info/: env-inspector.tsx  info-page.tsx  system-info.tsx
src/features/plugins/: add-plugin-dialog.tsx  installed-plugins.tsx  plugins-page.tsx
src/features/settings/: asdfrc-viewer.tsx  general-settings.tsx  settings-page.tsx
src/features/shims/: reshim-panel.tsx  shim-lookup.tsx  shims-page.tsx
src/features/tool-versions/: tool-versions-editor.tsx  tool-versions-page.tsx
src/hooks/: use-add-plugin.ts  use-theme.ts
src/lib/: commands.ts  i18n.test.ts  types.test.ts  types.ts  utils.test.ts
src/stores/: app-store.ts  settings-store.ts
(+8 files in other folders)
