[package]
name = "asdf-gui"
version = "0.1.0"
description = "A GUI for the asdf version manager"
authors = ["ricky"]
edition = "2024"

[lib]
name = "asdf_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
thiserror = "2"
dirs = "6"
